FIX - actions panel & overflow x

--- a/projects/sco-angular-components/src/components/sco-block-list/sco-block-list/sco-block-list.component.scss
+++ b/projects/sco-angular-components/src/components/sco-block-list/sco-block-list/sco-block-list.component.scss
@@ -1,4 +1,7 @@
 .sco-block-list {
+    overflow-x: auto;
+    overflow-y: hidden;
+
     &__tfoot {
         font-family: 'sco italic';
     }
