--- a/projects/sco-angular-components/src/components/sco-table/sco-table.component.scss
+++ b/projects/sco-angular-components/src/components/sco-table/sco-table.component.scss
@@ -1,4 +1,6 @@
 .sco-table {
+    overflow-x: auto;
+    overflow-y: hidden;
 
     &__table {
         width: 100%;
